src/objects/ADvendio__AccountingRecord__c.object
<CustomObject>
    <description>Allow to att. Files on that Object.</description>
    <fields>
        <fullName>ADvendio__AccountNumber__c</fullName>
        <description>Enter the relevant account number. Alternatively this can be set by a custom process.</description>
        <inlineHelpText>Enter the relevant account number.</inlineHelpText>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AccountingDate__c</fullName>
        <formula>ADvendio__InvoiceItem__r.ADvendio__Invoice__r.ADvendio__InvoiceDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date (Accounting)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertisingTax__c</fullName>
        <description>Advertising Tax if applicable will be automatically filled by a scheduled import job.</description>
        <inlineHelpText>Advertising Tax if applicable will be automatically filled by a scheduled import job.</inlineHelpText>
        <label>Advertising Tax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Amount__c</fullName>
        <description>invoiced amount</description>
        <inlineHelpText>invoiced amount</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__CampaignItemAccountPayableAssignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>deprecated</description>
        <label>CI AccountPayable Assignment(deprecated)</label>
        <referenceTo>ADvendio__CampaignItemAccountPayableAssignment__c</referenceTo>
        <relationshipLabel>Accounting Records</relationshipLabel>
        <relationshipName>AccountingRecords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Clickrate__c</fullName>
        <description>deprecated</description>
        <label>Clickrate (deprecated)</label>
        <precision>18</precision>
        <scale>17</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__CompanyCode__c</fullName>
        <description>Company Code if applicable will be automatically filled by a scheduled import job.</description>
        <inlineHelpText>Please enter the Company Code.</inlineHelpText>
        <label>Company Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__CostCenter__c</fullName>
        <description>Please enter the Cost Center. This can be set by a custom process.</description>
        <inlineHelpText>Please enter the Cost Center.</inlineHelpText>
        <label>Cost Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__DateOfReceipt__c</fullName>
        <description>Date of Receipt will be automatically filled by a scheduled import job.</description>
        <inlineHelpText>Date of Receipt will be automatically filled by a scheduled import job.</inlineHelpText>
        <label>Date of Receipt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__DateOfRevenue__c</fullName>
        <description>Date of Revenue will be automatically filled by a scheduled import job.</description>
        <inlineHelpText>Date of Revenue will be automatically filled by a scheduled import job.</inlineHelpText>
        <label>Date of Revenue</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__DebitCredit__c</fullName>
        <description>Debit or credit account type will be automatically filled by a scheduled import job.</description>
        <inlineHelpText>Debit or credit account type will be automatically filled by a scheduled import job.</inlineHelpText>
        <label>Debit/Credit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Debit</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__DebitorNumber__c</fullName>
        <description>The debitor number will be automatically filled by a scheduled import job.</description>
        <inlineHelpText>The debitor number will be automatically filled by a scheduled import job.</inlineHelpText>
        <label>Debitor Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__InternalOrder__c</fullName>
        <description>Please enter the Internal Order. This can be set by a custom process.</description>
        <inlineHelpText>Please enter the Internal Order.</inlineHelpText>
        <label>Internal Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceItem__c</fullName>
        <label>Invoice Item</label>
        <referenceTo>ADvendio__InvoiceItem__c</referenceTo>
        <relationshipLabel>Accounting Records</relationshipLabel>
        <relationshipName>AccountingRecords</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the related Invoice record will be automatically filled by a scheduled import job.</description>
        <inlineHelpText>Reference to the related Invoice record will be automatically filled by a scheduled import job.</inlineHelpText>
        <label>Invoice</label>
        <referenceTo>ADvendio__Invoice__c</referenceTo>
        <relationshipLabel>Accounting Records</relationshipLabel>
        <relationshipName>AccountingRecords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__LegalEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The corresponding Legal Entity will be automatically filled by a scheduled import job.</description>
        <inlineHelpText>The corresponding Legal Entity will be automatically filled by a scheduled import job.</inlineHelpText>
        <label>Legal Entity</label>
        <referenceTo>ADvendio__LegalEntity__c</referenceTo>
        <relationshipLabel>Accounting Records</relationshipLabel>
        <relationshipName>AccountingRecords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>deprecated</description>
        <inlineHelpText>Identify the record as already included in a Customer Accounting campaign.</inlineHelpText>
        <label>Processed (deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__QuantityCPM__c</fullName>
        <description>deprecated</description>
        <inlineHelpText>CPM based quantity</inlineHelpText>
        <label>Quantity (CPM) (deprecated)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Ratio__c</fullName>
        <description>deprecated</description>
        <label>Ratio (deprecated)</label>
        <precision>18</precision>
        <scale>17</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__ReceiptNumber__c</fullName>
        <description>Receipt Number will be automatically filled by a scheduled import job.</description>
        <inlineHelpText>Receipt Number will be automatically filled by a scheduled import job.</inlineHelpText>
        <label>Receipt Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Reference__c</fullName>
        <description>Reference i.e. to Media Campaign number or name will be automatically filled by a scheduled import job.</description>
        <inlineHelpText>Reference i.e. to Media Campaign number or name will be automatically filled by a scheduled import job.</inlineHelpText>
        <label>Reference</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__Status__c</fullName>
        <description>Choose the relevant Status.</description>
        <inlineHelpText>Choose the relevant Status.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Booked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__TermsOfPaymentKey__c</fullName>
        <description>Enter the Terms of Payment Key or abbreviation if applicable.  Alternatively this can be set by a custom process.</description>
        <inlineHelpText>Enter the Terms of Payment Key or abbreviation if applicable.</inlineHelpText>
        <label>Terms of Payment Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__TermsOfPayment__c</fullName>
        <description>Terms of payment will be automatically filled by a scheduled import job.</description>
        <inlineHelpText>Terms of payment will be automatically filled by a scheduled import job.</inlineHelpText>
        <label>Terms of Payment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__TypeOfReceipt__c</fullName>
        <description>Type of Receipt will be automatically filled by a scheduled import job.</description>
        <inlineHelpText>Type of Receipt will be automatically filled by a scheduled import job.</inlineHelpText>
        <label>Type of Receipt</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>CreditNote</fullName>
                    <label>Credit Note</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__VATCode__c</fullName>
        <description>Please enter the VAT Code if applicable.  Alternatively this can be set by a custom process.</description>
        <inlineHelpText>Please enter the VAT Code if applicable.</inlineHelpText>
        <label>VAT Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__VAT__c</fullName>
        <description>The Value Added Tax will be automatically filled by a scheduled import job.</description>
        <inlineHelpText>The Value Added Tax will be automatically filled by a scheduled import job.</inlineHelpText>
        <label>VAT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Accounting Record</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AR-{0000000}</displayFormat>
        <label>AccRec #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>